# program_design_week

./: .gitignore  CMakeLists.txt  README.md  addrecord.ui  addrecords.cpp  addrecords.h  addrecords.ui  datarecord.cpp  datarecord.h  editrecords.cpp  editrecords.h  editrecords.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainnwindow.ui
.cache/clangd/index/: main.cpp.CC226F4B71D4F701.idx  mainwindow.cpp.E8DF185504E0181D.idx
